--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "loguru>=0.7.3",
     "psycopg[binary]>=3.2.10",
     "pydantic>=2.11.10",
+    "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.44",
 ]
