--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.44",
+    "llama-index-llms-openai>=0.6.5",
+    "llama-index>=0.14.5",
+    "python-dotenv>=1.1.1",
 ]
 [tool.mypy]
 ignore_missing_imports = true
