--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "llama-index-llms-openai>=0.6.5",
     "llama-index>=0.14.5",
     "python-dotenv>=1.1.1",
+    "openai>=1.109.1",
 ]
 [tool.mypy]
 ignore_missing_imports = true
