--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "llama-index>=0.14.5",
     "python-dotenv>=1.1.1",
     "openai>=1.109.1",
+    "telegramify-markdown[mermaid]>=0.5.2",
 ]
 [tool.mypy]
 ignore_missing_imports = true
