--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "faker>=37.11.0",
     "types-python-dateutil>=2.9.0.20251008",
     "pydub>=0.25.1",
+    "yfinance>=0.2.66",
 ]
 [tool.mypy]
 ignore_missing_imports = true
