--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "types-python-dateutil>=2.9.0.20251008",
     "pydub>=0.25.1",
     "yfinance>=0.2.66",
+    "matplotlib>=3.10.7",
+    "seaborn>=0.13.2",
 ]
 [tool.mypy]
 ignore_missing_imports = true
